force-app/main/default/objects/WC_Rate__c/WC_Rate__c.object-meta.xml
<CustomObject>
    <label>WC Rate</label>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>WC Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WC Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>