force-app/main/default/objects/WC_Rate__c/fields/Assessment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Assessment Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>