force-app/main/default/objects/WC_Rate__c/fields/Bill_Assessment_Fees__c.field-meta.xml
<CustomField>
    <fullName>Bill_Assessment_Fees__c</fullName>
    <formula>Assessment_Fee__c *  Sales_Premium__c</formula>
    <inlineHelpText>Assessment Fees * Sales Premium</inlineHelpText>
    <label>Bill Assessment Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>