force-app/main/default/objects/WC_Rate__c/fields/Bill_Premium__c.field-meta.xml
<CustomField>
    <fullName>Bill_Premium__c</fullName>
    <formula>Sales_Premium__c + Bill_Assessment_Fees__c</formula>
    <inlineHelpText>Sales Premium + Bill Assessment Fees</inlineHelpText>
    <label>Bill Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>