force-app/main/default/objects/WC_Rate__c/fields/Calculate_WC_Rate_by__c.field-meta.xml
<CustomField>
    <fullName>Calculate_WC_Rate_by__c</fullName>
    <label>Calculate WC Rate by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modified WC Rate</fullName>
                <default>true</default>
                <label>Modified WC Rate</label>
            </value>
            <value>
                <fullName>Trion Adjusted WC Bill Rate</fullName>
            </value>
            <value>
                <fullName>WC Charge Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>