force-app/main/default/objects/WC_Rate__c/fields/Carrer_Audit__c.field-meta.xml
<CustomField>
    <fullName>Carrer_Audit__c</fullName>
    <formula>IF(
 NOT(ISBLANK(Proposal__r.Policy_Year__c ))  &amp;&amp;  Proposal__r.Policy_Year__r.Account__r.Id  &lt;&gt;  Policy__r.Carrier__r.Id, true, false )</formula>
    <label>Carrer Audit</label>
    <type>Checkbox</type>
</CustomField>