force-app/main/default/objects/WC_Rate__c/fields/Carrier_Comp_Rate__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Comp_Rate__c</fullName>
    <formula>IF(Carrier_WC_Rate__r.Policy__r.Territorial_Rating__c = TRUE &amp;&amp; Territory__c = 1, Carrier_WC_Rate__r.Territory_1_Rate__c,
IF(Carrier_WC_Rate__r.Policy__r.Territorial_Rating__c = TRUE &amp;&amp; Territory__c = 2, Carrier_WC_Rate__r.Territory_2_Rate__c ,
IF(Carrier_WC_Rate__r.Policy__r.Territorial_Rating__c = TRUE &amp;&amp; Territory__c = 4, Carrier_WC_Rate__r.Territory_4_Rate__c ,
IF(Carrier_WC_Rate__r.Policy__r.Territorial_Rating__c = TRUE &amp;&amp; ISBLANK(Territory__c),Carrier_WC_Rate__r.Territory_4_Rate__c,  Carrier_WC_Rate__r.Rate__c   ))))</formula>
    <label>Manual Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>