force-app/main/default/objects/WC_Rate__c/fields/Carrier_Rate__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Rate__c</fullName>
    <label>Carrier WC Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>