force-app/main/default/objects/WC_Rate__c/fields/Carrier_WC_Rate__c.field-meta.xml
<CustomField>
    <fullName>Carrier_WC_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier WC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Carrier_WC_Rate__c.Policy__c</field>
            <operation>equals</operation>
            <valueField>$Source.Policy__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Carrier_WC_Rate__c</referenceTo>
    <relationshipLabel>WC Rates</relationshipLabel>
    <relationshipName>WC_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>