force-app/main/default/objects/WC_Rate__c/fields/Client_Exp_Mod__c.field-meta.xml
<CustomField>
    <fullName>Client_Exp_Mod__c</fullName>
    <formula>Proposal__r.Exp_Mod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exp Mod</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>