force-app/main/default/objects/WC_Rate__c/fields/Client_Location__c.field-meta.xml
<CustomField>
    <fullName>Client_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Location</label>
    <referenceTo>Client_Location__c</referenceTo>
    <relationshipLabel>WC Rates</relationshipLabel>
    <relationshipName>WC_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>