force-app/main/default/objects/WC_Rate__c/fields/Current_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Rate__c</fullName>
    <label>Current Rate (ACORD)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>