force-app/main/default/objects/WC_Rate__c/fields/Debit_Discount__c.field-meta.xml
<CustomField>
    <fullName>Debit_Discount__c</fullName>
    <defaultValue>1</defaultValue>
    <label>UW Mod</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>