force-app/main/default/objects/WC_Rate__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>IF(
 ISBLANK(Manual_Comp_Description__c), State_Comp_Code__r.Code_Name_Description__c,  State_Comp_Code__r.WC_Code__r.Name &amp; &quot; - &quot; &amp; Manual_Comp_Description__c)</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>