force-app/main/default/objects/WC_Rate__c/fields/Effective_Mod__c.field-meta.xml
<CustomField>
    <fullName>Effective_Mod__c</fullName>
    <formula>round(
Effective_Rate__c /  Carrier_Rate__c,4)</formula>
    <inlineHelpText>WC Charge Rate / Carrier Rate</inlineHelpText>
    <label>WC Charge Mod</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>