force-app/main/default/objects/WC_Rate__c/fields/Effective_Rate__c.field-meta.xml
<CustomField>
    <fullName>Effective_Rate__c</fullName>
    <label>WC Charge Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>