force-app/main/default/objects/WC_Rate__c/fields/Estimated_Ann_Surcharge_Assessment_Fees__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Ann_Surcharge_Assessment_Fees__c</fullName>
    <formula>Assessment_Fee__c * Premium__c</formula>
    <inlineHelpText>Assessment Fee * Manual Premium</inlineHelpText>
    <label>Estimated Ann. Surcharge/Assessment Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>