force-app/main/default/objects/WC_Rate__c/fields/Estimated_Annual_Manual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Manual_Premium__c</fullName>
    <formula>Current_Rate__c  *  Gross_Wages__c</formula>
    <inlineHelpText>Current Rate * Gross Wages</inlineHelpText>
    <label>Estimated Annual Manual Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>