force-app/main/default/objects/WC_Rate__c/fields/Exp_Mod_Premium__c.field-meta.xml
<CustomField>
    <fullName>Exp_Mod_Premium__c</fullName>
    <formula>Gross_Wages__c * Exp_Mod_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Wages * Current Modified Rate</inlineHelpText>
    <label>Exp Mod Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>