force-app/main/default/objects/WC_Rate__c/fields/Exp_Mod_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exp_Mod_Rate__c</fullName>
    <description>Exp Mod stored on the SUTA Quote object. Used for UW</description>
    <formula>Carrier_Rate__c *   Client_Exp_Mod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Carrier WC Rate * Exp Mod</inlineHelpText>
    <label>Exp Mod Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>