force-app/main/default/objects/WC_Rate__c/fields/Manual_Comp_Description__c.field-meta.xml
<CustomField>
    <fullName>Manual_Comp_Description__c</fullName>
    <label>Manual Comp Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>