force-app/main/default/objects/WC_Rate__c/fields/Mod_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Mod_Calculator__c</fullName>
    <formula>IF(
ISPICKVAL( Calculate_WC_Rate_by__c , &quot;Modified WC Rate&quot;), Modifier__c,
IF(
ISPICKVAL( Calculate_WC_Rate_by__c , &quot;Trion Adjusted WC Bill Rate&quot;), Trion_Mod__c,
IF(
ISPICKVAL( Calculate_WC_Rate_by__c , &quot;WC Charge Rate&quot;), Effective_Mod__c, NULL)))</formula>
    <inlineHelpText>Mod selected from the &quot;Calculator WC Rate by&quot; field</inlineHelpText>
    <label>Mod (Calculator)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>