force-app/main/default/objects/WC_Rate__c/fields/Modified_Rate__c.field-meta.xml
<CustomField>
    <fullName>Modified_Rate__c</fullName>
    <formula>Carrier_Rate__c * Modifier__c</formula>
    <inlineHelpText>Carrier Rate * Modifier</inlineHelpText>
    <label>Modified WC Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>