force-app/main/default/objects/WC_Rate__c/fields/Modifier__c.field-meta.xml
<CustomField>
    <fullName>Modifier__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Modifier</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>