force-app/main/default/objects/WC_Rate__c/fields/Part_Time_Employees__c.field-meta.xml
<CustomField>
    <fullName>Part_Time_Employees__c</fullName>
    <label># Part Time Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>