force-app/main/default/objects/WC_Rate__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>WC Rates</relationshipLabel>
    <relationshipName>WC_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>