force-app/main/default/objects/WC_Rate__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <formula>Carrier_Rate__c *  Gross_Wages__c</formula>
    <inlineHelpText>Carrier Rate * Gross Wages</inlineHelpText>
    <label>Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>