force-app/main/default/objects/WC_Rate__c/fields/Sales_Premium__c.field-meta.xml
<CustomField>
    <fullName>Sales_Premium__c</fullName>
    <formula>Gross_Wages__c * Sales_Rate__c</formula>
    <inlineHelpText>Gross Wages * Sales Rate</inlineHelpText>
    <label>Sales Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>