force-app/main/default/objects/WC_Rate__c/fields/Sales_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rate__c</fullName>
    <formula>ROUND(
IF( 
ISPICKVAL( Calculate_WC_Rate_by__c , &quot;Modified WC Rate&quot;), Carrier_Rate__c * Modifier__c, 
IF( 
ISPICKVAL( Calculate_WC_Rate_by__c , &quot;Trion Adjusted WC Bill Rate&quot;), Carrier_Rate__c * Trion_Mod__c , 
IF( 
ISPICKVAL( Calculate_WC_Rate_by__c , &quot;WC Charge Rate&quot;), Carrier_Rate__c * Effective_Mod__c , 
null))),4)</formula>
    <inlineHelpText>Carrier Rate * Mod</inlineHelpText>
    <label>Sales Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>