force-app/main/default/objects/WC_Rate__c/fields/State_Comp_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Comp_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State Comp Code</label>
    <referenceTo>State_Comp_Code__c</referenceTo>
    <relationshipLabel>WC Rates</relationshipLabel>
    <relationshipName>WC_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>