force-app/main/default/objects/WC_Rate__c/fields/SUTA_Quote__c.field-meta.xml
<CustomField>
    <fullName>SUTA_Quote__c</fullName>
    <label>SUTA Quote</label>
    <referenceTo>SUTA_Quote__c</referenceTo>
    <relationshipLabel>Comp Rates</relationshipLabel>
    <relationshipName>Comps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>