force-app/main/default/objects/WC_Rate__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>