force-app/main/default/objects/WC_Rate__c/fields/Total_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill_Rate__c</fullName>
    <formula>SUTA_Quote__r.Total_Bill_Rate__c + WC_Bill_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>WC Bill Rate + FICA + Medicare + FUTA + SUTA Bill Rate + Admin Fee Gross Wages + EPLI</inlineHelpText>
    <label>Total Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>