force-app/main/default/objects/WC_Rate__c/fields/Total_bill_Rate_After_UI_Wage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Total_bill_Rate_After_UI_Wage_Limit__c</fullName>
    <formula>Proposal__r.Total_Bill_Rate_After_UI_Wage_Limit__c + WC_Bill_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Proposal Total Bill Rate After UI Wage Limit + WC Bill Rate</inlineHelpText>
    <label>Total Bill Rate After UI Wage Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>