force-app/main/default/objects/WC_Rate__c/fields/Total_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_Employees__c</fullName>
    <formula>Part_Time_Employees__c + of_Employees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>