force-app/main/default/objects/WC_Rate__c/fields/Trion_Adjusted_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Trion_Adjusted_Bill_Rate__c</fullName>
    <label>Trion Adjusted WC Bill Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>