force-app/main/default/objects/WC_Rate__c/fields/Trion_Mod__c.field-meta.xml
<CustomField>
    <fullName>Trion_Mod__c</fullName>
    <formula>Trion_Adjusted_Bill_Rate__c / Carrier_Rate__c</formula>
    <inlineHelpText>Trion Adjusted Bill Rate / Carrier Rate</inlineHelpText>
    <label>Trion WC Adjusted Mod</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>