force-app/main/default/objects/WC_Rate__c/fields/Underwriting_Premium__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Premium__c</fullName>
    <formula>Gross_Wages__c * Underwriting_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Wages * Underwriting Rate</inlineHelpText>
    <label>Underwriting Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>