force-app/main/default/objects/WC_Rate__c/fields/Underwriting_Rate__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Rate__c</fullName>
    <formula>ROUND( 
Carrier_Rate__c  *  Debit_Discount__c,4)</formula>
    <label>Underwriting Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>