force-app/main/default/objects/WC_Rate__c/fields/WC_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>WC_Bill_Rate__c</fullName>
    <formula>ROUND(
((Carrier_Rate__c * Mod_Calculator__c ) * Assessment_Fee__c)+ Carrier_Rate__c * Mod_Calculator__c,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bill Rate (includes the State Assessment Fee and Surcharge if included is selected)
(Bill Rate * State Assessment Fee and Surcharge) + Bill Rate</inlineHelpText>
    <label>Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>