force-app/main/default/objects/WC_Rate__c/fields/WC_Bill_Rate_Mod__c.field-meta.xml
<CustomField>
    <fullName>WC_Bill_Rate_Mod__c</fullName>
    <formula>IF(
ISPICKVAL( Calculate_WC_Rate_by__c, &quot;Modified WC Rate&quot;), Modifier__c,
IF(
ISPICKVAL( Calculate_WC_Rate_by__c, &quot;Trion Adjusted WC Bill Rate&quot;),  Trion_Mod__c ,
IF(
ISPICKVAL( Calculate_WC_Rate_by__c, &quot;WC Charge Rate&quot;),   Effective_Mod__c  , null)))</formula>
    <inlineHelpText>Mod selected on the &quot;Calculate WC Rate by&quot; field</inlineHelpText>
    <label>Mod</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>