force-app/main/default/objects/WC_Rate__c/validationRules/Modified_WC_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Modified_WC_Rate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Calculate_WC_Rate_by__c , &quot;Modified WC Rate&quot;),
ISNULL(   Modifier__c   ))</errorConditionFormula>
    <errorDisplayField>Modifier__c</errorDisplayField>
    <errorMessage>Enter a mod to calculate the proposals modified rate.</errorMessage>
</ValidationRule>