force-app/main/default/objects/WC_Rate__c/validationRules/WC_Charge_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>WC_Charge_Rate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Calculate_WC_Rate_by__c , &quot;WC Charge Rate&quot;),
ISBLANK(  Effective_Rate__c     ))</errorConditionFormula>
    <errorDisplayField>Effective_Rate__c</errorDisplayField>
    <errorMessage>Enter the Effective rate to calculate the proposals effective rate.</errorMessage>
</ValidationRule>