force-app/main/default/objects/WC_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Policy__c</columns>
    <columns>Carrier_Comp_Rate__c</columns>
    <columns>Carrier_WC_Rate__c</columns>
    <columns>Carrier_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>